# digital-flow

./: .gitignore  .pylintrc  Dockerfile.tox  LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
src/digiflow/: __init__.py  common.py  digflow_identifier.py  digiflow_export.py  digiflow_generate.py  digiflow_identifier.py  digiflow_io.py  digiflow_metadata.py  digiflow_multisaf.py  digiflow_validate.py
tests/: conftest.py  test_digiflow_generate.py  test_digiflow_identifier.py  test_digiflow_io.py  test_digiflow_io_oai_loader.py  test_digiflow_metadata.py  test_digiflow_metadata_transform.py  test_digiflow_record_criteria.py  test_digiflow_record_handler.py  test_digiflow_validate.py  test_digiflow_validate_mets.py  test_export_saf.py  test_multisaf.py  test_record_handling.py  test_record_service.py  test_requirements.txt  test_validate_fsdata.py  test_validate_imgdata.py  test_validate_metadata.py
tests/resources/: 1877049026_Aa_mods38.xml  1906264740.kxp  k2-mets-058141367.k2x  k2_mets_mena_12988274719564.xml  k2_mets_mena_44080924X.xml  k2_mets_morbio_1748529021.xml  k2_mets_vd18_058141367.xml  k2_mets_vd18_147638674.xml  k2_mets_vd18_147638674_curated.xml  k2_mets_vd18_153142340.xml  k2_mets_vd18_153142537.xml  k2_mets_vd18_153142537_curated.xml  k2_mets_vd18_183475917.xml  k3_300896638-18490701.xml  migration-qa-images.csv  oai-invalid-request.xml  oai-record-missing.xml  oai-records-opendata-vd18-sample-broken.csv  oai-records-opendata-vd18-sample-fixed.csv  oai-records-opendata-vd18-sample-mixture.csv  zkw_vd18_phase4_01.csv  (+7 more)
(+81 files in other folders)
