[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digiflow"
version = "5.5.9"
description = "Father's Little Digitization Workflow Helper"
readme = "README.md"
requires-python = ">=3.8"
authors = [
	{name = "Universitäts- und Landesbibliothek Sachsen-Anhalt", email = "development@bibliothek.uni-halle.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License"
]
dependencies = [
	"lxml",
	"Pillow",
	"numpy",
	"docker",
	"requests",
	"saxonche",
 	"openpyxl",
]

[project.urls]
Homepage = "https://github.com/ulb-sachsen-anhalt/digital-flow"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
